--- a/index.html
+++ b/index.html
@@ -28,143 +28,149 @@
     <script type="text/javascript" src="js/goToTop.js"></script>
 </head>
 <body>
-    <div class="cj-container">
-        <div class="go-to-top" data-go-to-top="btn">
-            <img src="img/arrowGoToTop.png" alt="go to top">
+<div class="cj-container">
+    <div class="go-to-top" data-go-to-top="btn">
+        <img src="img/arrowGoToTop.png" alt="go to top">
+    </div>
+</div>
+
+<header class="header">
+    <div class="header-container">
+        <div class="logo">
+            <img src="img/logotype.png" alt="Logoipe">
+        </div>
+        <button class="menu-control external">
+            <span></span>
+        </button>
+        <div class="header-controls">
+            <p class="header-controls-title">CoinJapan</p>
+            <nav class="header-navigation">
+                <ul>
+                    <li><a class="active-nav-item" href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Partners</a></li>
+                    <li><a href="#">Carriers</a></li>
+                    <li><a href="#">Contacts</a></li>
+                    <li><a href="#">News</a></li>
+                </ul>
+            </nav>
+            <div class="header-lang-btn">
+                <div class="current-lang">en</div>
+                <div class="lang-icon"></div>
+            </div>
+            <ul class="header-languages">
+                <li><a href="#" class="active-lang"><span>en</span></a></li>
+                <li><a href="#"><span>ru</span></a></li>
+            </ul>
         </div>
     </div>
+</header>
 
-    <header class="header">
-        <div class="header-container">
-            <div class="logo">
-                <img src="img/logotype.png" alt="Logoipe">
-            </div>
-            <button class="menu-control external">
-                <span></span>
-            </button>
-            <div class="header-controls">
-                <p class="header-controls-title">CoinJapan</p>
-                <nav class="header-navigation">
-                    <ul>
-                        <li><a class="active-nav-item" href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">Partners</a></li>
-                        <li><a href="#">Carriers</a></li>
-                        <li><a href="#">Contacts</a></li>
-                        <li><a href="#">News</a></li>
-                    </ul>
-                </nav>
-                <div class="header-lang-btn">
-                    <div class="current-lang">en</div>
-                    <div class="lang-icon"></div>
-                </div>
-                <ul class="header-languages">
-                    <li><a href="#" class="active-lang"><span>en</span></a></li>
-                    <li><a href="#"><span>ru</span></a></li>
-                </ul>
-            </div>
-        </div>
-    </header>
-
-    <section class="home-title">
-        <div class="home-title-bg">
-            <canvas id="js-background-renderer"></canvas>
-        </div>
-        <div class="home-title-content">
-            <div class="cj-container">
-                <h1 data-css-animate="trigger">
-                    <span>ICO Consulting and</span>
-                    <span>Blockchain Technologies</span>
-                </h1>
-                <div class='icon-scroll' data-go-to-top="btn-down">
-                    <div class="icon-scroll-screen"></div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="home-about-us" data-go-to-top="down-destination">
+<section class="home-title">
+    <div class="home-title-bg">
+        <canvas id="js-background-renderer"></canvas>
+    </div>
+    <div class="home-title-content">
         <div class="cj-container">
-            <div class="about-us-content">
-                <h2 class="section-header" data-css-animate="trigger">We are CoinJapan</h2>
-                <p data-css-animate="trigger">Coinjapan is a reliable partner to attract Japanese investments via crowdfunding. The world's largest
-                    cryptocurrency market with proactive investors, who willingly invest in innovative projects and
-                    the future tech, is open only to those who "speak" with it understandable language. Coinjapan
-                    will pave the way to the Japanese investment market for your company, with further providing of
+            <h1 data-css-animate="trigger">
+                <span>ICO Consulting and</span>
+                <span>Blockchain Technologies</span>
+            </h1>
+            <div class='icon-scroll' data-go-to-top="btn-down">
+                <div class="icon-scroll-screen"></div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="home-about-us" data-go-to-top="down-destination">
+    <div class="cj-container">
+        <div class="about-us-content">
+            <h2 class="section-header" data-css-animate="trigger">We are CoinJapan</h2>
+            <p data-css-animate="trigger">Coinjapan is a reliable partner to attract Japanese investments via
+                crowdfunding. The world's largest
+                cryptocurrency market with proactive investors, who willingly invest in innovative projects and
+                the future tech, is open only to those who "speak" with it understandable language. Coinjapan
+                will pave the way to the Japanese investment market for your company, with further providing of
                 successful ICO for the rapid development of the project.</p>
-                <div class="cj-btn-container">
-                    <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
-                </div>
+            <div class="cj-btn-container">
+                <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
             </div>
-            <div class="about-us-slider">
-                <div id="mainSlider" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner" role="listbox">
-                        <div class="carousel-item active">
-                            <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-20_21-27-36.jpg"
-                            alt="First slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-37.jpg"
-                            alt="Second slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-43.jpg"
-                            alt="Third slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-47.jpg"
-                            alt="Third slide">
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-52.jpg"
-                            alt="Third slide">
-                        </div>
+        </div>
+        <div class="about-us-slider">
+            <div id="mainSlider" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-20_21-27-36.jpg"
+                             alt="First slide">
                     </div>
-                    <div class="slide-controls-box">
-                        <a class="about-us-slider-prev" href="#mainSlider" role="button" data-slide="prev">
-                            <img src="img/prev-arrow.png" alt="prev">
-                        </a>
-                        <a class="about-us-slider-next" href="#mainSlider" role="button" data-slide="next">
-                            <img src="img/next-arrow.png" alt="next">
-                        </a>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-37.jpg"
+                             alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-43.jpg"
+                             alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-47.jpg"
+                             alt="Third slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block img-fluid" src="img/about-us-carousel/photo_2018-03-25_11-20-52.jpg"
+                             alt="Third slide">
                     </div>
                 </div>
+                <div class="slide-controls-box">
+                    <a class="about-us-slider-prev" href="#mainSlider" role="button" data-slide="prev">
+                        <img src="img/prev-arrow.png" alt="prev">
+                    </a>
+                    <a class="about-us-slider-next" href="#mainSlider" role="button" data-slide="next">
+                        <img src="img/next-arrow.png" alt="next">
+                    </a>
+                </div>
             </div>
-        </section>
-        <section class="home-projects">
-            <div class="cj-container">
-                <h2 class="section-header" data-css-animate="trigger">Achievements</h2>
-                <div class="project-items" data-css-animate="trigger">
-                    <div class="row" data-projectsAutocount="container">
-                       <div class="col-sm-12 col-md-4">
-                        <div class="project-item ">
-                            <h3>Collected funds</h3>
-                            <p class="partners-number-medium">$<span data-projectsAutocount="field" data-from="267" data-to="400">400</span><span class="partner-number-description">Million</span></p>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-4">
-                        <div class="project-item project-item-middle">
-                            <h3>Successful ICOs</h3>
-                            <p><span class="success-ico-color partners-number-medium" data-projectsAutocount="field" data-from="7" data-to="15">15</span></p>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-4">
-                        <div class="project-item project-item-last">
-                            <h3>Attracted investors</h3>
-                            <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="2500" data-to="3000">3000</span><span>+</span></p>
-                        </div>
+        </div>
+    </div>
+</section>
+<section class="home-projects">
+    <div class="cj-container">
+        <h2 class="section-header" data-css-animate="trigger">Achievements</h2>
+        <div class="project-items" data-css-animate="trigger">
+            <div class="row" data-projectsAutocount="container">
+                <div class="col-sm-12 col-md-4">
+                    <div class="project-item ">
+                        <h3>Collected funds</h3>
+                        <p class="partners-number-medium">$<span data-projectsAutocount="field" data-from="267"
+                                                                 data-to="400">400</span><span
+                                class="partner-number-description">Million</span></p>
                     </div>
                 </div>
-                <div class="cj-btn-container">
-               <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
-           </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="project-item project-item-middle">
+                        <h3>Successful ICOs</h3>
+                        <p><span class="success-ico-color partners-number-medium" data-projectsAutocount="field"
+                                 data-from="7" data-to="15">15</span></p>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-4">
+                    <div class="project-item project-item-last">
+                        <h3>Attracted investors</h3>
+                        <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="2500"
+                                                                data-to="3000">3000</span><span>+</span></p>
+                    </div>
+                </div>
             </div>
-            
-       </div>
-   </section>
-   <section class="home-news">
+            <div class="cj-btn-container">
+                <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
+            </div>
+        </div>
+
+    </div>
+</section>
+<section class="home-news">
     <div class="cj-container">
         <h2 class="section-header" data-css-animate="trigger">News</h2>
         <div class="news-items">
@@ -234,13 +240,13 @@
                     <h4 class="news-title">Id diam maecenas ultricies mi eget mauris.</h4>
                 </div>
             </div>
-                 <div class="cj-btn-container">
-           <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
-       </div>
+            <div class="cj-btn-container">
+                <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
+            </div>
         </div>
-   </section>
+</section>
 
-   <section class="home-partners">
+<section class="home-partners">
     <div class="cj-container">
         <h2 class="section-header" data-css-animate="trigger">Partners</h2>
 
@@ -308,7 +314,8 @@
         </div>
     </div>
 </footer>
-<div id="preloader" style="width: 100%; height: 1000px; position: fixed; background-color: #fff; top:0; left: 0; z-index: 999;"></div>
+<div id="preloader"
+     style="width: 100%; height: 1000px; position: fixed; background-color: #fff; top:0; left: 0; z-index: 999;"></div>
 <script src="js/main.js"></script>
 </body>
 </html>
