Updating About page +members +links

--- a/about.html
+++ b/about.html
@@ -83,7 +83,6 @@
         </div>
     </section><!-- TITLE -->
 
-
     <section class="about-description">
         <div class="cj-container">
             <article>
@@ -101,8 +100,87 @@
     </section><!-- SUB-TITLE -->
 
     <section class="about-team">
-        
-    </section>
+        <div class="cj-container">
+            <h2 class="section-header">Our Team</h2>
+            <div class="row team-members">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="team-member">
+                        <img src="img/member-picture.png" alt="team-member">
+                        <h3 class="member-name">Tellus Pellen</h3>
+                        <h4 class="member-position">Tristique senectus</h4>
+                        <article>
+                            Ristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor.
+                        </article>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="team-member">
+                        <img src="img/member-picture.png" alt="team-member">
+                        <h3 class="member-name">Tellus Pellen</h3>
+                        <h4 class="member-position">Tristique senectus</h4>
+                        <article>
+                            Ristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor.
+                        </article>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="team-member">
+                        <img src="img/member-picture.png" alt="team-member">
+                        <h3 class="member-name">Tellus Pellen</h3>
+                        <h4 class="member-position">Tristique senectus</h4>
+                        <article>
+                            Ristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor.
+                        </article>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="team-member">
+                        <img src="img/member-picture.png" alt="team-member">
+                        <h3 class="member-name">Tellus Pellen</h3>
+                        <h4 class="member-position">Tristique senectus</h4>
+                        <article>
+                            Ristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor.
+                        </article>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="team-member">
+                        <img src="img/member-picture.png" alt="team-member">
+                        <h3 class="member-name">Tellus Pellen</h3>
+                        <h4 class="member-position">Tristique senectus</h4>
+                        <article>
+                            Ristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor.
+                        </article>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="team-member">
+                        <img src="img/member-picture.png" alt="team-member">
+                        <h3 class="member-name">Tellus Pellen</h3>
+                        <h4 class="member-position">Tristique senectus</h4>
+                        <article>
+                            Ristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor.
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><!-- TEAM -->
+
+    <section class="about-links">
+        <div class="cj-container">
+            <div class="links-container">
+                <a href="#" class="about-projects-service">
+                    <span>Services</span>
+                    <img src="img/arrow-in-circle.png" alt="arrow in circle">
+                </a>
+                <a href="#" class="about-projects-link">
+                    <span>Projects</span>
+                    <img src="img/arrow-in-circle.png" alt="arrow in circle">
+                </a>
+            </div>
+        </div>
+    </section><!-- LINKS -->
 
     <footer class="footer">
         <div class="footer-container">
