Finished Desctop Version

--- a/about.html
+++ b/about.html
@@ -170,14 +170,18 @@
     <section class="about-links">
         <div class="cj-container">
             <div class="links-container">
-                <a href="#" class="about-projects-service">
-                    <span>Services</span>
-                    <img src="img/arrow-in-circle.png" alt="arrow in circle">
-                </a>
-                <a href="#" class="about-projects-link">
-                    <span>Projects</span>
-                    <img src="img/arrow-in-circle.png" alt="arrow in circle">
-                </a>
+                <div class="about-projects-service">
+                     <a href="#">
+                        <span>Services</span>
+                        <img src="img/arrow-in-circle.png" alt="arrow in circle">
+                    </a>
+                </div>
+               <div class="about-projects-link">
+                    <a href="#" class="">
+                        <span>Projects</span>
+                        <img src="img/arrow-in-circle.png" alt="arrow in circle">
+                    </a>
+               </div>
             </div>
         </div>
     </section><!-- LINKS -->
