--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="js/lib/jquery.spincrement.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.gsap.min.js"></script>
     <script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
+    <script type="text/javascript" src="js/lib/parallax.min.js"></script>
 
     <script type="text/javascript" src="js/particles.js"></script>
     <script type="text/javascript" src="js/preloader.js"></script>
@@ -30,6 +31,7 @@
     <script type="text/javascript" src="js/menuHandler.js"></script>
     <script type="text/javascript" src="js/goToTop.js"></script>
     <script type="text/javascript" src="js/breadcrump.js"></script>
+    <script type="text/javascript" src="js/paralax.js"></script>
 </head>
 <body style="height: 2000px">
     <div class="cj-container">
@@ -73,7 +75,7 @@
 
     <br><br><br>
 
-    <section class="about-title">
+    <section class="about-title parallax-window" data-parallax="scroll" data-image-src="img/mask.png"">
         <div class="cj-container">
             <h1>About Us</h1>
             <ul class="breadcrumbs">
@@ -82,6 +84,7 @@
             </ul>    
         </div>
     </section><!-- TITLE -->
+
 
     <section class="about-description">
         <div class="cj-container">
@@ -171,49 +174,49 @@
         <div class="cj-container">
             <div class="links-container">
                 <div class="about-projects-service">
-                     <a href="#">
-                        <span>Services</span>
-                        <img src="img/arrow-in-circle.png" alt="arrow in circle">
-                    </a>
-                </div>
-               <div class="about-projects-link">
-                    <a href="#" class="">
-                        <span>Projects</span>
-                        <img src="img/arrow-in-circle.png" alt="arrow in circle">
-                    </a>
-               </div>
+                   <a href="#">
+                    <span>Services</span>
+                    <img src="img/arrow-in-circle.png" alt="arrow in circle">
+                </a>
+            </div>
+            <div class="about-projects-link">
+                <a href="#" class="">
+                    <span>Projects</span>
+                    <img src="img/arrow-in-circle.png" alt="arrow in circle">
+                </a>
             </div>
         </div>
-    </section><!-- LINKS -->
+    </div>
+</section><!-- LINKS -->
 
-    <footer class="footer">
-        <div class="footer-container">
-            <div class="row">
-                <div class="col-12">
-                    <span class="footer-connect-us">Connect with us</span>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 col-sm-12">
-                    <div class="social-links">
-                        <a href="#" class="fb-icon"></a>
-                        <a href="#" class="twitter-icon"></a>
-                        <a href="#" class="telegram-icon"></a>
-                        <a href="#" class="youtube-icon"></a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="copyright">© 2018 CoinJapan</div>
-                </div>
-            </div>
-            <div class="footer-go-to-top" data-go-to-top="btn">
-                <img src="img/arrowGoToTop.png" alt="go to top">
+<footer class="footer">
+    <div class="footer-container">
+        <div class="row">
+            <div class="col-12">
+                <span class="footer-connect-us">Connect with us</span>
             </div>
         </div>
-    </footer>
-    <div id="preloader" style="width: 100%; height: 1000px; position: fixed; background-color: #fff; top:0; left: 0; z-index: 999;"></div>
-    <script src="js/main.js"></script>
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <div class="social-links">
+                    <a href="#" class="fb-icon"></a>
+                    <a href="#" class="twitter-icon"></a>
+                    <a href="#" class="telegram-icon"></a>
+                    <a href="#" class="youtube-icon"></a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="copyright">© 2018 CoinJapan</div>
+            </div>
+        </div>
+        <div class="footer-go-to-top" data-go-to-top="btn">
+            <img src="img/arrowGoToTop.png" alt="go to top">
+        </div>
+    </div>
+</footer>
+<div id="preloader" style="width: 100%; height: 1000px; position: fixed; background-color: #fff; top:0; left: 0; z-index: 999;"></div>
+<script src="js/main.js"></script>
 </body>
 </html>
