Added frame-background video to about.html page

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <script type="text/javascript" src="js/breadcrump.js"></script>
     <script type="text/javascript" src="js/paralax.js"></script>
 </head>
-<body style="height: 2000px">
+<body>
     <div class="cj-container">
         <div class="go-to-top" data-go-to-top="btn">
             <img src="img/arrowGoToTop.png" alt="go to top">
@@ -85,7 +85,6 @@
         </div>
     </section><!-- TITLE -->
 
-
     <section class="about-description">
         <div class="cj-container">
             <article>
@@ -94,11 +93,14 @@
         </div>
     </section><!-- DESCRIPTION -->
 
+    
+
     <section class="about-sub-title">
-        <div class="cover-bg">
-            <div class="cj-container">
+        <div class="cj-container">
+            <div class="cover-bg">
                 <img src="img/coinjapan-sub-logo.png" alt="CoinJapan">
             </div>
+            <iframe class="about-video" src="https://www.youtube.com/embed/riMfIhIb8Rk?autoplay=1&controls=0&loop=1&&playlist=riMfIhIb8Rk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </section><!-- SUB-TITLE -->
 
