Added frame-background video to about.html page

--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
             <div class="cover-bg">
                 <img src="img/coinjapan-sub-logo.png" alt="CoinJapan">
             </div>
-            <iframe class="about-video" src="https://www.youtube.com/embed/riMfIhIb8Rk?autoplay=1&controls=0&loop=1&&playlist=riMfIhIb8Rk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe class="about-video" src="https://www.youtube.com/embed/riMfIhIb8Rk?autoplay=1&controls=0&loop=1&&playlist=riMfIhIb8Rk&showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </section><!-- SUB-TITLE -->
 
@@ -218,6 +218,7 @@
         </div>
     </div>
 </footer>
+
 <div id="preloader" style="width: 100%; height: 1000px; position: fixed; background-color: #fff; top:0; left: 0; z-index: 999;"></div>
 <script src="js/main.js"></script>
 </body>
